# spread-adhoc-allocator

./: Cargo.toml  README.md  REUSE.toml  build.rs  spread-lxd.yaml  spread.yaml
.github/workflows/: build.yml  release.yml
LICENSES/: MIT.txt
src/: allocator.rs  config.rs  lxd.rs  main.rs
tests/failed-alloc/: task.yaml
tests/hello/: task.yaml
tests/smoke/: task.yaml
