[package]
name = "spread-adhoc-allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yml = "0.0.12"
simple_logger = "5.0.0"
thiserror = "2.0.9"
