[package]
name = "spread-adhoc-allocator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
bytesize = {version = "1.3.0", features = ["serde"]}
clap = { version = "4.5.26", features = ["derive"] }
directories = "6.0.0"
log = "0.4.22"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yml = "0.0.12"
simple_logger = {version = "5.0.0", features = ["stderr"]}
thiserror = "2.0.9"
